--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,24 +11,14 @@ workflows:
           filters:
             branches:
               only: master
-      # - orb-tools/publish-dev:
-      #     orb-name: arribada/arribada
-      #     publish-token-variable: CIRCLECI_API_TOKEN
-      #     requires:
-      #     - orb-tools/lint
-      #     - orb-tools/pack
-      #     filters:
-      #       branches:
-      #         only: master
       - orb-tools/publish:
-          orb-ref: arribada/docker@0.0.4
+          context: org-context
+          orb-ref: arribada/docker@0.0.5
           publish-token-variable: CIRCLECI_API_TOKEN
           checkout: false
           attach-workspace: true
           requires:
             - orb-tools/pack
           filters:
-            # tags:
-            #   only: /[0-9]+(\.[0-9]+){2}$/
             branches:
               only: master
