--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -4,27 +4,28 @@ parameters:
   containerName:
     description: The container name when publishing it to docker hub
     type: string
-machine:
-  - image: ubuntu-1604:201903-01
+executor:
+machine: true
+image: ubuntu-1604:201903-01
 steps:
-  - checkout
-  - run: |
-      sudo apt update
-      sudo apt install -y qemu qemu-user-static qemu-user binfmt-support
-      git clone https://github.com/computermouth/qemu-static-conf.git
-      sudo mkdir -p /lib/binfmt.d
-      sudo cp qemu-static-conf/*.conf /lib/binfmt.d/
-      sudo systemctl restart systemd-binfmt.service
-      sudo apt purge -y docker-ce docker-ce-cli
-      sudo curl -fsSL https://get.docker.com -o get-docker.sh
-      sudo sh get-docker.sh
-      sudo usermod -aG docker $(whoami)
-      mkdir $HOME/.docker
-      sh -c 'echo "{ \"experimental\": \"enabled\" }" >> $HOME/.docker/config.json'
-      docker buildx create --name=qemu
-      docker buildx inspect --bootstrap qemu
-      docker buildx use qemu
-      docker login --username=$DOCKERHUB_USER --password=$DOCKERHUB_PASS
+- checkout
+- run: |
+    sudo apt update
+    sudo apt install -y qemu qemu-user-static qemu-user binfmt-support
+    git clone https://github.com/computermouth/qemu-static-conf.git
+    sudo mkdir -p /lib/binfmt.d
+    sudo cp qemu-static-conf/*.conf /lib/binfmt.d/
+    sudo systemctl restart systemd-binfmt.service
+    sudo apt purge -y docker-ce docker-ce-cli
+    sudo curl -fsSL https://get.docker.com -o get-docker.sh
+    sudo sh get-docker.sh
+    sudo usermod -aG docker $(whoami)
+    mkdir $HOME/.docker
+    sh -c 'echo "{ \"experimental\": \"enabled\" }" >> $HOME/.docker/config.json'
+    docker buildx create --name=qemu
+    docker buildx inspect --bootstrap qemu
+    docker buildx use qemu
+    docker login --username=$DOCKERHUB_USER --password=$DOCKERHUB_PASS
 
-      [ -z "$CIRCLE_TAG" ] && echo "No release tag pushing to latest" || export CIRCLE_TAG=":$CIRCLE_TAG"
-      docker buildx build --progress=plain --platform linux/amd64,linux/arm/v7 -t $DOCKERHUB_REPO/<< parameters.containerName >>$CIRCLE_TAG --push .
+    [ -z "$CIRCLE_TAG" ] && echo "No release tag pushing to latest" || export CIRCLE_TAG=":$CIRCLE_TAG"
+    docker buildx build --progress=plain --platform linux/amd64,linux/arm/v7 -t $DOCKERHUB_REPO/<< parameters.containerName >>$CIRCLE_TAG --push .
