--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -5,10 +5,7 @@ parameters:
     description: The container name when publishing it to docker hub
     type: string
 
-orbs:
-  arriada: arribada/docker@0.0.7
-executor:
-  name: arribada/ubuntu
+executor: << parameters.executor >>
 steps:
 - checkout
 - run: |
