fix the executor formating
Signed-off-by: Krasi Georgiev <8903888+krasi-georgiev@users.noreply.github.com>

--- a/src/executors/ubuntu.yml
+++ b/src/executors/ubuntu.yml
@@ -1,3 +1,4 @@
-description: >
+description: |
   Build and publish binaries and container images for a given release tag.
-machine: ubuntu-1604:201903-01
+machine:
+  image: ubuntu-1604:201903-01
